[package]
name = "nise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
fern = "0.6.2"
glow = "0.11.2"
humantime = "2.1.0"
log = "0.4"
objc = "0.2"
num = "0.4.3"
#sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }

#[[bin]]
#name = "graphics-test"
#path = "src/common/graphics-test.rs"

[lib]
crate-type = ["cdylib", "lib"]
bench = false

[features]
nestest = []
